--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   },
   "homepage": "https://github.com/amndatasyaa/amndatasyaa.github.io#readme",
   "dependencies": {
+    "d3": "^7.9.0",
+    "framer-motion": "^12.23.25",
     "next": "^15.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@types/node": "^24.8.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
