--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "d3": "^7.9.0",
     "framer-motion": "^12.23.25",
     "next": "^15.5.6",
+    "prismjs": "^1.30.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-simple-code-editor": "^0.14.1"
   },
   "devDependencies": {
     "@types/d3": "^7.4.3",
